specs/blueprints/errors/parsing/field_without_key.eno
# A field without a key

-- input
field:
- item
- item
: value
-- input

## ParseError

-- text
The field in line 4 has no key.
-- text

-- snippet
   Line | Content
   ...
      2 | - item
      3 | - item
 >    4 | : value
-- snippet

selection: [3,0] => [3,0]
